# agent-question-and-tool-trace-research

./: .gitignore  README.md
question-taxonomy-pipeline/: .env.example  README.md  main.py  pyproject.toml
question-taxonomy-pipeline/application/: __init__.py  batching.py  constants.py  evaluation.py  inference.py  prompting.py  serialize.py
question-taxonomy-pipeline/application/dto/: __init__.py  question_labeling.py
question-taxonomy-pipeline/application/observability/: __init__.py  log_context.py
question-taxonomy-pipeline/application/ports/: __init__.py  artifact_store.py  config.py  prompts.py  provider.py
question-taxonomy-pipeline/application/use_cases/: __init__.py  capture_run_snapshot.py  run_experiment.py
question-taxonomy-pipeline/configs/: chatdev_sample_questions_experiment.yaml  experiment.yaml  moltbook_140_gemini_35_flash_experiment.yaml  moltbook_140_gemini_flash_lite_experiment.yaml  moltbook_140_gemini_flash_lite_resume_50_experiment.yaml  moltbook_140_nvidia_step_experiment.yaml  moltbook_140_nvidia_step_smoke_experiment.yaml  moltbook_50_gemini_31_flash_lite_experiment.yaml  moltbook_cleaned_text_experiment.yaml  moltbook_cleaned_text_nvidia_experiment.yaml  moltbook_experiment.yaml  reddit_browser_video_editor_experiment.yaml  reddit_cms_webdev_experiment.yaml  reddit_three_posts_loose_audit_experiment.yaml  taxonomy.yaml
question-taxonomy-pipeline/configs/providers/: anthropic.yaml  gemini.yaml  nvidia.yaml  ollama.yaml  openai.yaml
question-taxonomy-pipeline/dataset/reddit_browser_video_editor/: raw_comments_from_txt.csv  reddit_questions_cleaned.csv  reddit_questions_cleaned.txt  reddit_questions_flagged.csv  reddit_questions_for_classification.csv  reddit_questions_for_classification.txt
question-taxonomy-pipeline/dataset/reddit_cms_webdev/: raw_comments_from_txt.csv  reddit_cms_questions_cleaned.csv  reddit_cms_questions_cleaned.txt  reddit_cms_questions_flagged.csv  reddit_cms_questions_for_classification.csv  (+1 more)
question-taxonomy-pipeline/domain/: __init__.py
question-taxonomy-pipeline/infrastructure/: __init__.py  constants.py
question-taxonomy-pipeline/tools/: assemble_batch_predictions.py  compare_predictions.py  extract_chatdev_questions.py  scaffold_prompts.py
(+100 files in other folders)
